First pass cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,30 @@
 {
-  "cSpell.words": ["wotr"]
+  "cSpell.words": [
+    "Amroth",
+    "angmar",
+    "aragorn",
+    "barad",
+    "dwarven",
+    "edoras",
+    "Erebor",
+    "ered",
+    "Guldur",
+    "Gundabad",
+    "Harad",
+    "lorien",
+    "Luin",
+    "minas",
+    "morannon",
+    "mordor",
+    "Morgul",
+    "moria",
+    "orthanc",
+    "pelargir",
+    "Rhun",
+    "rivendell",
+    "Tirith",
+    "treebeard",
+    "umbar",
+    "wotr"
+  ]
 }
