--- a/appsscript.json
+++ b/appsscript.json
@@ -1,7 +1,7 @@
 {
+  "oauthScopes": ["https://www.googleapis.com/auth/spreadsheets.currentonly"],
   "timeZone": "Europe/London",
-  "dependencies": {
-  },
+  "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
 }
