--- a/apps_script/package.json
+++ b/apps_script/package.json
@@ -1,24 +1,22 @@
 {
   "name": "wotr-ladder-update",
-  "dependencies": {
-  },
   "devDependencies": {
     "@google/clasp": "^2.4.2",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/google-apps-script": "^1.0.56",
-    "@typescript-eslint/parser": "^5.48.1",
-    "prettier": "^2.8.2",
-    "ts-loader": "^9.4.2",
-    "webpack": "^5.78.0",
-    "webpack-cli": "^5.0.1",
+    "@types/google-apps-script": "^1.0.83",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
     "eslint-config-standard-with-typescript": "^27.0.1",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "gas-webpack-plugin": "^2.3.0",
-    "typescript": "^4.9.4"
+    "prettier": "^2.8.2",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1"
   },
   "scripts": {
     "build": "webpack --mode none"
